fixes issue where preview is not showing on embed browse

--- a/app/assets/stylesheets/modules/browse-embed.css.scss
+++ b/app/assets/stylesheets/modules/browse-embed.css.scss
@@ -17,7 +17,7 @@
 
 .embed-callnumber-browse-container{
   position: relative;
-  height: 430px;
+  height: auto;
   overflow: hidden;
   margin-top:15px;
   padding-top: 17px;
